tests/hm_typing/faulty_unknown_constraint.sy
f: fn<a: Blargh> -> *a : fn -> int do 1 end

start :: fn do end
// error: $UnknownConstraint
